--- a/gaya.css
+++ b/gaya.css
@@ -6,13 +6,15 @@
 
 nav{
     display: flex;
-    width: 84%;
+    width: 100%;
     height: 60px;
     margin:auto;
     padding: 20px 0;
     align-items: center;
     justify-content: space-between;
-    z-index: 1
+    z-index: 1;
+    position: fixed;
+    background-color: #fcf6f6;
 }
 
 nav ul li {
@@ -51,7 +53,6 @@ nav ul li a:hover{
 .header {
     width: 100%;
     height: 100vh;
-    /* position: sti; */
 }
 
 .header {
@@ -157,8 +158,8 @@ video{
     display: flex;
     flex-direction: column;
     background-color: #343434;
-    height: 100vw;
-    margin-bottom: 100%;
+    height: 100%;
+    margin-bottom: 700px;
     justify-content: center;
     align-items: center;
 }
@@ -167,6 +168,13 @@ video{
     height: 25%; 
     margin-top: -5%;
     object-position: center;
+}
+
+.textkantor{
+    font-family: sans-serif;
+    color: #fafafa;
+    font-size: 15px;
+    text-align: center;
 }
 
 .a.tbl-hitam {
@@ -192,23 +200,9 @@ video{
     flex-direction: column;
     background-color: #ffffff;
     height: 100%;
-    margin-bottom: 700px;
+    margin-bottom: 240px;
     justify-content: center;
     align-items: center;
-}
-
-.latihan{
-    width: 15%;
-    height: auto;
-    margin-top: -10%;
-    margin-right: 35%;
-}
-
-.awards {
-    width: 15%;
-    height: auto;
-    margin-top: -10%;
-    margin-left: 40%;
 }
 
 #partners{
@@ -226,3 +220,83 @@ video{
     height: 40%;
 }
 
+.tabelabout{
+        font-family: sans-serif;
+        color: #fcf6f6;
+        border-collapse: collapse;
+        width: 50%;
+        border: 1px solid #f2f5f7;
+        margin-top: 50px;
+}
+
+.tabelabout tr th {
+        background: #041e29;
+        color: #fff;
+        font-weight: normal;
+    }
+
+.about, th, td {
+        padding: 8px 20px;
+        text-align: center;
+    }
+
+.about tr:nth-child(even) {
+        background: #86dcec;
+    }
+
+.kunjungan{
+    font-family: sans-serif;
+    color: #fcf6f6;
+    border: 1px solid #f2f5f7;
+    padding: 5.6px 12px 10px;
+    margin: 0px 150px
+}
+
+.kunjungan tr th {
+    background: #041e29;
+    color: #fff;
+    font-weight: normal;
+}
+
+.kunjungan, th, td{
+    padding: 5px 8px;
+    text-align: center;
+}
+
+.ukuranservice{
+    width: 560px;
+    height: 314px;
+    align-items: center;
+    margin-top: 85px;
+}
+
+/*.li a, .dropbtn {
+    display: inline-block;
+    text-align: center;
+    padding: 10px 10px;
+    text-decoration: none;
+    }
+
+    li.dropdown {
+    display: inline-block;
+    }
+    
+    .dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 19px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    }
+    
+    .dropdown-content a {
+    color: black;
+    padding: 1px 10px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    }
+    
+    .dropdown:hover .dropdown-content {
+    display: block;
+    }*/
